[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://main/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/LevelSelectMenu.gd" type="Script" id=3]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 3 )

[node name="Button1" type="Button" parent="."]
margin_left = 200.0
margin_top = 236.0
margin_right = 300.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( -335, -236 )
theme = ExtResource( 1 )
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 395.0
margin_top = 236.0
margin_right = 495.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( -335, -236 )
theme = ExtResource( 1 )
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 590.0
margin_top = 239.0
margin_right = 690.0
margin_bottom = 339.0
rect_pivot_offset = Vector2( 61, 100 )
theme = ExtResource( 1 )
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 785.0
margin_top = 237.0
margin_right = 885.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( -335, -236 )
theme = ExtResource( 1 )
text = "4"

[node name="Button5" type="Button" parent="."]
margin_left = 980.0
margin_top = 236.0
margin_right = 1080.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( -335, -236 )
theme = ExtResource( 1 )
text = "5"

[node name="Transition" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
